# BIT

./: LICENSE  README.md  pyproject.toml  requirements.txt  tutorial.ipynb
BIT/: likelihoods.py
src/bit/: __init__.py  samplers.py
tests/: test_basic.py
